modules/gdscript/tests/scripts/analyzer/errors/variable_overloads_superclass_function.gd
func test():
	pass

class A:
	func overload_me():
		pass

class B extends A:
	var overload_me
